[gd_scene load_steps=8 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=4]
action = "ui_accept"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -41.0
margin_top = 40.0
margin_right = 41.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -297.5
margin_top = -94.5
margin_right = 297.5
margin_bottom = -21.5
custom_fonts/font = SubResource( 2 )
text = "Dodge The Creeps"
align = 1
valign = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -190.0
margin_top = 33.0
margin_right = 190.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 5 )
text = "Start The Game"

[node name="RestartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
